@@ -14315,6 +14315,10 @@ def create_sample_config():
                 "enterasys_temp",
                 "mknotifyd",
                 "mknotifyd.connection",
+                "postfix_mailq",
+                "nullmailer_mailq",
+                "barracuda_mailqueues",
+                "qmail_stats",
             ],
             "inventory_check_interval": 120,
             "enable_rulebased_notifications": True,
