@@ -1069,6 +1069,10 @@ register_configvar(group,
             ( "raritan_pdu_inlet",                _("Raritan PDU: Input Phases")),
             ( "mknotifyd",                        _("Notification Spooler")),
             ( "mknotifyd.connection",             _("Notification Spooler Connection")),
+            ( "postfix_mailq",                    _("Postfix: Mail Queue")),
+            ( "nullmailer_mailq",                 _("Nullmailer: Mail Queue")),
+            ( "barracuda_mailqueues",             _("Barracuda: Mail Queue")),
+            ( "qmail_stats",                      _("Qmail: Mail Queue")),
         ],
         render_orientation = "vertical",
     ),
