@@ -174,6 +174,8 @@
             NOTE: Please refer to the migration notes!
     * 3879 ipmi, ipmi_sensors: unified ipmi checks which now work the same way...
     * 3747 epson_beamer_lamp: New check to monitor the lamp operation time of Epson beamers
+    * 3905 barracuda_mailqueues, nullmailer_mailq, postfix_mailq, qmail_stats: these checks now have items, postfix can now monitor multi directories...
+            NOTE: Please refer to the migration notes!
     * 3073 FIX: windows agent: relative paths to mrpe scripts are now treated as relative to the agent installation directory...
     * 3061 FIX: mk_jolokia: Fixed debugging of the agent plugin
     * 3074 FIX: windows agent: fixed incorrect values for 32-bit performance counters
